# SealedLips

./: LICENSE  README.md  doc.md
Client/: CMakeLists.txt  encryption.cpp  encryption.h
Client_test_Console/Client_test_vs/: Client_test.sln
Client_test_Console/Client_test_vs/Client_test/: ChatWareSocket.cpp  ChatWareSocket.h  Client_test.vcxproj  Client_test.vcxproj.filters  main.cpp
Client_test_Console/Client_test_vs/Client_test/x64/Debug/: Client_test.exe.recipe  Client_test.ilk  vc143.idb
Client_test_Console/Client_test_vs/Client_test/x64/Debug/Client_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Client_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client_test_Console/qt/: CMakeLists.txt  chatwaresocket.cpp  chatwaresocket.h
client-qt/: addfrienddialog.ui  aesdecrypt.cpp  aesencrypt.cpp  chat_room_client.pro  chat_room_client.pro.user.34b048d.22  chat_room_client.pro.user.605aaa8.22  chat_room_client.pro.user.8d58143.4.9-pre1  chatinfomanage.h  common.h  logindlg.ui  registdlg.ui  src.qrc  widget.ui
